--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but decidebien.pe doesn't work properly without JavaScript enabled. Please enable it to
+    <strong>We're sorry but votoinformado.tk doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
   <div id="app"></div>
